Fix stall profile pic alignment and heart icon toggle

--- a/CSS/HOME.css
+++ b/CSS/HOME.css
@@ -490,7 +490,7 @@
 .popUp__message .popUp__item__details .quantity .input .bi {
     border: 2px solid var(--color-main2);
     border-radius: .2rem;
-    padding: .2rem;
+    padding: .2rem .4rem;
     cursor: pointer;
 }
 
@@ -525,7 +525,7 @@
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    width: 70%;
+    width: fit-content;
 }
 
 .popUp__message .order_summary .content .left .top {
