--- a/CSS/STALLMENU.css
+++ b/CSS/STALLMENU.css
@@ -21,6 +21,7 @@
 .stall_profile .image {
     height: 15.625rem;
     width: 100%;
+    position: relative;
 }
 
 .stall_profile .image .img_container {
@@ -38,12 +39,13 @@
     border: .2rem solid white;
     background: var(--color-gradient);
     position: absolute;
-    left: 4rem;
-    bottom: 14rem;
+    left: 3rem;
+    bottom: -4rem;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
+    z-index: inherit;
 }
 
 .profile_details {
@@ -60,6 +62,16 @@
     gap: .5rem;
 }
 
+.profile_details_texts h3 {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.profile_details_texts h3 span {
+    font-size: 2.5rem;
+}
+
 .stall_details {
     margin-left: 2rem;
 }
@@ -67,9 +79,14 @@
 .stall_details p {
     font-weight: 500;
     color: var(--color-dark-gray);
+    display: flex;
+    align-items: center;
+    gap: .2rem;
 }
 
-.profile_details i {
+.profile_details span,
+.profile_details i,
+#heartIcon {
     background: var(--color-gradient2);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
